--- a/index.html
+++ b/index.html
@@ -25,51 +25,51 @@ var _hmt = _hmt || [];
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/1.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/2.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/3.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/4.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/5.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/6.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/7.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/8.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.蓝文静.com" class="thumbnail">
+				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
 					<img src="img/9.jpg" alt="...">
 				</a>
 			</div>
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
 	</div>
 	
 	
-<!--高速版 评论区插件-->
+<!--高速版 评论区插件
 <div id="SOHUCS"></div>
 <script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>
 <script type="text/javascript">
@@ -85,6 +85,7 @@ var _hmt = _hmt || [];
         appid: 'cyskDoXl7',
         conf: 'prod_fa618278615b137d565fbf6449b26edb'
     });
+-->
 </script> 
 
 </body>
