--- a/index.html
+++ b/index.html
@@ -1,92 +1,103 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-	<title>蓝文静-世界上最美的静静</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="世界上最美的静静,最美的静静,langel,蓝文静." />
-	<meta name="description" content="世界上最美的静静,是蓝文静" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>世界上最美的女人--蓝文静</title>
+    <meta name="description" content="世界上最美的女人--蓝文静">
+    <meta name="keywords" content="世界上最美的女人,蓝文静,文静">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/1.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/2.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/3.jpg" alt="...">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/4.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/5.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/6.jpg" alt="...">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/7.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/8.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="http://www.xn--7dv901ewvm.com" class="thumbnail">
-					<img src="img/9.jpg" alt="...">
-				</a>
-			</div>
-		</div>
-	</div>
-	
-	
-<!--高速版 评论区插件
-<div id="SOHUCS"></div>
-<script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>
-<script type="text/javascript">
-    window.changyan.api.config({
-        appid: 'cyskDoXl7',
-        conf: 'prod_fa618278615b137d565fbf6449b26edb'
-    });
--->
-</script> 
+    <div class="container">
+        <header class="text-center">
+            <h1>世界上最美的女人</h1>
+            <p class="lead">蓝文静</p>
+        </header>
 
+        <div class="row photo-gallery">
+            <!-- 第一行 -->
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/1.jpg" alt="卧槽!就是她!!" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/2.jpg" alt="颜值爆表!!!" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/3.jpg" alt="好TMD的美啊!!!" class="img-responsive">
+                </a>
+            </div>
+
+            <!-- 第二行 -->
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/4.jpg" alt="妈我要娶她!!!" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/5.jpg" alt="世界上最美的女人" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/6.jpg" alt="对!就是她!!!" class="img-responsive">
+                </a>
+            </div>
+
+            <!-- 第三行 -->
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/7.jpg" alt="大写的美!!!" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/8.jpg" alt="世界第一美啊" class="img-responsive">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+                <a href="#" class="thumbnail">
+                    <img src="Image/9.jpg" alt="美哭了好吗!!!" class="img-responsive">
+                </a>
+            </div>
+        </div>
+
+        <footer class="text-center">
+            <p>&copy;2016 世界上最美的女人--蓝文静 | Pnc. All Rights Reserved.</p>
+        </footer>
+    </div>
+
+    <script src="Js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js "></script>
+    <script src="js/canvas-nest.js"></script>
+    <script>
+        // 图片懒加载
+        document.addEventListener("DOMContentLoaded", function() {
+            const lazyImages = [].slice.call(document.querySelectorAll("img"));
+            
+            if ("IntersectionObserver" in window) {
+                let lazyImageObserver = new IntersectionObserver(function(entries, observer) {
+                    entries.forEach(function(entry) {
+                        if (entry.isIntersecting) {
+                            let lazyImage = entry.target;
+                            lazyImage.src = lazyImage.src; // 强制加载图片
+                            lazyImageObserver.unobserve(lazyImage);
+                        }
+                    });
+                });
+
+                lazyImages.forEach(function(lazyImage) {
+                    lazyImageObserver.observe(lazyImage);
+                });
+            }
+        });
+    </script>
 </body>
 </html>
