--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
 
         <div class="row photo-gallery">
             <!-- 第一行 -->
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
-                    <img src="Image/1.jpg" alt="卧槽!就是她!!" class="img-responsive">
+                    <img data-src="Image/1.jpg" alt="卧槽!就是她!!" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
-                    <img src="Image/2.jpg" alt="颜值爆表!!!" class="img-responsive">
+                    <img data-src="Image/2.jpg" alt="颜值爆表!!!" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
-                    <img src="Image/3.jpg" alt="好TMD的美啊!!!" class="img-responsive">
+                    <img data-src="Image/3.jpg" alt="好TMD的美啊!!!" class="img-responsive">
                 </a>
             </div>
 
             <!-- 第二行 -->
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/4.jpg" alt="妈我要娶她!!!" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/5.jpg" alt="世界上最美的女人" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/6.jpg" alt="对!就是她!!!" class="img-responsive">
                 </a>
             </div>
 
             <!-- 第三行 -->
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/7.jpg" alt="大写的美!!!" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/8.jpg" alt="世界第一美啊" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4 photo-item">
+            <div class="col-xs-4 col-sm-4 col-md-4 photo-item">
                 <a href="#" class="thumbnail">
                     <img src="Image/9.jpg" alt="美哭了好吗!!!" class="img-responsive">
                 </a>
@@ -73,21 +73,19 @@
             <p>&copy;2016 世界上最美的女人--蓝文静 | Pnc. All Rights Reserved.</p>
         </footer>
     </div>
-
-    <script src="Js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js "></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/canvas-nest.js"></script>
     <script>
-        // 图片懒加载
         document.addEventListener("DOMContentLoaded", function() {
-            const lazyImages = [].slice.call(document.querySelectorAll("img"));
+            const lazyImages = [].slice.call(document.querySelectorAll("img[data-src]"));
             
             if ("IntersectionObserver" in window) {
                 let lazyImageObserver = new IntersectionObserver(function(entries, observer) {
                     entries.forEach(function(entry) {
                         if (entry.isIntersecting) {
                             let lazyImage = entry.target;
-                            lazyImage.src = lazyImage.src; // 强制加载图片
+                            lazyImage.src = lazyImage.dataset.src; 
                             lazyImageObserver.unobserve(lazyImage);
                         }
                     });
